Contrast error fixed

--- a/src/components/Plans/Plans.module.css
+++ b/src/components/Plans/Plans.module.css
@@ -73,6 +73,7 @@
 .description {
 	opacity: 0.5973;
 	margin-block-end: 1.625rem;
+	line-height: 1.563rem;
 }
 
 .benefits {
